# llm-backend

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: manual.yml
financeflow_llm_backend/: core.py  server.py
